--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "supertest": "^7.1.1",
     "tailwindcss": "^4.1.12",
     "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.8.3",
