--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -58,6 +58,9 @@ jobs:
           node-version: 20
           cache: 'npm'
 
+      - name: Upgrade npm to latest
+        run: npm install -g npm@latest
+
       - name: Cache Playwright browsers
         uses: actions/cache@v4
         with:
