--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -71,5 +71,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      - name: Run database migrations
+        run: npm run migrate
       - name: Run all tests
         run: npm run test
